--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -24,3 +24,4 @@
 @import './db-theme/pages/page--terms-of-use';
 @import './db-theme/pages/page--merch-store';
 @import './db-theme/pages/page--product';
+@import './db-theme/pages/page--media';
