feature: blog single page simple layout

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -13431,10 +13431,10 @@ ul, ol {
   box-shadow: 4.078px 4.078px 8.156px 0px rgba(181, 34, 235, 0.3), -4.078px -4.078px 8.156px 0px rgba(181, 34, 235, 0.3), 2.039px 2.039px 4.078px 0px rgba(216, 110, 255, 0.6), -2.039px -2.039px 4.078px 0px rgba(216, 110, 255, 0.6);
 }
 
-.db-section--blog-listing {
+.db-page--media .db-section--blog-listing {
   padding: 150px 30px 100px;
 }
-.db-section--blog-listing .db-container .db-grid-list {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list {
   display: grid;
   grid-template-columns: repeat(4, minmax(250px, 1fr));
   justify-content: center;
@@ -13443,38 +13443,38 @@ ul, ol {
   gap: 27px;
 }
 @media only screen and (max-width: 1440px) {
-  .db-section--blog-listing .db-container .db-grid-list {
+  .db-page--media .db-section--blog-listing .db-container .db-grid-list {
     grid-template-columns: repeat(3, minmax(250px, 1fr));
   }
 }
 @media only screen and (max-width: 1080px) {
-  .db-section--blog-listing .db-container .db-grid-list {
+  .db-page--media .db-section--blog-listing .db-container .db-grid-list {
     grid-template-columns: repeat(2, minmax(250px, 1fr));
   }
 }
 @media only screen and (max-width: 768px) {
-  .db-section--blog-listing .db-container .db-grid-list {
+  .db-page--media .db-section--blog-listing .db-container .db-grid-list {
     grid-template-columns: repeat(2, minmax(200px, 1fr));
   }
 }
 @media only screen and (max-width: 480px) {
-  .db-section--blog-listing .db-container .db-grid-list {
+  .db-page--media .db-section--blog-listing .db-container .db-grid-list {
     grid-template-columns: repeat(1, minmax(200px, 1fr));
   }
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item {
   background-color: #0C0B0B;
   padding: 20px;
   width: 100%;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .top-wrap {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .top-wrap {
   position: relative;
   width: 100%;
   height: 190px;
   overflow: hidden;
   margin-bottom: 20px;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .top-wrap .blog-img {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .top-wrap .blog-img {
   position: relative;
   z-index: 1;
   display: block;
@@ -13483,7 +13483,7 @@ ul, ol {
   width: 100%;
   height: 100%;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .top-wrap .blog-tag-list {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .top-wrap .blog-tag-list {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -13492,7 +13492,7 @@ ul, ol {
   align-items: stretch;
   gap: 8px;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .top-wrap .blog-tag-list .blog-tag-item {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .top-wrap .blog-tag-list .blog-tag-item {
   color: var(--white-color);
   font-family: var(--primary-font-family);
   font-size: 13px;
@@ -13504,7 +13504,7 @@ ul, ol {
   background-color: #0C0B0B;
   padding: 8px 10px;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .blog-title {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .blog-title {
   color: var(--white-color);
   font-family: var(--primary-font-family);
   font-size: 20px;
@@ -13514,16 +13514,16 @@ ul, ol {
   display: block;
   margin-bottom: 8px;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .blog-title:hover {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .blog-title:hover {
   color: var(--secondary-color);
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-inner-row {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-inner-row {
   justify-content: flex-start;
   align-items: center;
   gap: 8px;
   margin-bottom: 8px;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-inner-row .blog-author {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-inner-row .blog-author {
   color: var(--white-color);
   font-family: var(--primary-font-family);
   font-size: 14px;
@@ -13531,12 +13531,12 @@ ul, ol {
   font-weight: 400;
   line-height: 1.25em;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-inner-row .svg-icon-dash-line {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-inner-row .svg-icon-dash-line {
   display: block;
   max-width: 27px;
   min-width: 27px;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-inner-row .blog-date-post {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-inner-row .blog-date-post {
   color: var(--white-color);
   font-family: var(--primary-font-family);
   font-size: 14px;
@@ -13544,7 +13544,7 @@ ul, ol {
   font-weight: 400;
   line-height: 1.25em;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .blog-description {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .blog-description {
   color: var(--white-color);
   font-family: var(--tertiary-font-family);
   font-size: 15px;
@@ -13553,8 +13553,10 @@ ul, ol {
   line-height: 1.5em;
   margin-bottom: 20px;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-btn--read-more {
-  display: block;
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-btn--read-more {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   max-width: 170px;
   min-width: 170px;
   width: 100%;
@@ -13562,7 +13564,7 @@ ul, ol {
   border: 1px solid var(--secondary-color);
   border-radius: 50px;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-btn--read-more .label {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-btn--read-more .label {
   color: var(--secondary-color);
   font-family: var(--tertiary-font-family);
   font-size: 14px;
@@ -13572,9 +13574,141 @@ ul, ol {
   line-height: 1.25em;
   transition: color var(--hover-transition-duration) ease-in-out 0ms;
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-btn--read-more:hover {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-btn--read-more:hover {
   background-color: var(--secondary-color);
 }
-.db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-btn--read-more:hover .label {
+.db-page--media .db-section--blog-listing .db-container .db-grid-list .db-grid-item .bot-wrap .db-btn--read-more:hover .label {
   color: var(--white-color);
+}
+
+.db-page--blog-single .db-section--blog-single {
+  padding: 150px 30px 150px;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-featured-img {
+  position: relative;
+  z-index: 1;
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 620px;
+  border-radius: 10px;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap {
+  position: relative;
+  z-index: 2;
+  max-width: 1200px;
+  width: 100%;
+  margin: -50px 0 0;
+  padding: 50px 100px 100px;
+}
+@media only screen and (max-width: 1200px) {
+  .db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap {
+    width: calc(100% - 60px);
+  }
+}
+@media only screen and (max-width: 1080px) {
+  .db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap {
+    padding: 50px 50px 100px;
+  }
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap::before {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  inset: 0;
+  display: block;
+  background-color: #060B03;
+  width: 100%;
+  height: 100%;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  right: -60px;
+  bottom: -60px;
+  display: block;
+  background-color: #95CC0E;
+  width: calc(100% - 60px);
+  height: calc(100% - 100px);
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container {
+  position: relative;
+  z-index: 2;
+  max-width: 768px;
+  width: 100%;
+  margin: 0 0 0 auto;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container .blog-tag-list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 26px;
+  margin-bottom: 22px;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container .blog-tag-list .blog-tag-item {
+  color: var(--white-color);
+  font-family: var(--primary-font-family);
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+  line-height: 1.25em;
+  white-space: nowrap;
+  display: block;
+  padding: 14px 24px;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container .blog-title {
+  color: var(--white-color);
+  font-family: var(--primary-font-family);
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.5em;
+  margin-bottom: 30px;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container .db-inner-row {
+  justify-content: flex-start;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 30px;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container .db-inner-row .blog-author {
+  color: var(--white-color);
+  font-family: var(--primary-font-family);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25em;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container .db-inner-row .svg-icon-dash-line {
+  display: block;
+  max-width: 27px;
+  min-width: 27px;
+  height: auto;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container .db-inner-row .blog-date-post {
+  color: var(--white-color);
+  font-family: var(--primary-font-family);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25em;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container .blog-content {
+  color: var(--white-color);
+  font-family: var(--tertiary-font-family);
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75em;
+}
+.db-page--blog-single .db-section--blog-single .db-container .blog-details-wrap .db-inner-container .blog-content * {
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  font-style: inherit;
+  font-weight: inherit;
+  line-height: inherit;
 }
