--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -25,3 +25,4 @@
 @import './db-theme/pages/page--merch-store';
 @import './db-theme/pages/page--product';
 @import './db-theme/pages/page--media';
+@import './db-theme/pages/page--blog-single';
