--- a/templates/page.media.liquid
+++ b/templates/page.media.liquid
@@ -7,7 +7,11 @@
   const DB_SF_Page_Media_Options = {
     name: 'DB SF Page Media Options',
     data() {
-      return {}
+      return {
+        blogs: [
+          
+        ],
+      }
     },
     methods: {
       loadPage() {
