update: make article content dynamic in blog single page; fix blog listing not layout properly;

--- a/sections/static-blog-single.liquid
+++ b/sections/static-blog-single.liquid
@@ -61,23 +61,7 @@
           </template>
         </div>
         <div class="blog-content">
-          <p>
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            <br/>
-            <br/>
-            <img class="blog-featured-img db-img"
-              alt=""
-              title=""
-              src="https://placehold.co/768x420"
-              width=""
-              height=""
-              loading="lazy"/>
-            </br>
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            <br/>
-            <br/>
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-          </p>
+          <div v-html="article.content"></div>
         </div>
       </div>
     </div>
