--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -312,7 +312,7 @@
                         {% render 'widget--columbus2' %}
                       </div>
                       <div class="db-widget-inner-col">
-                        {% render 'widget--emporium' %}
+                        {% render 'widget--emporium-v2' %}
                       </div>
                     </div>
                   </div>
