--- a/styles/db-theme/pages/_page--merch-store.scss
+++ b/styles/db-theme/pages/_page--merch-store.scss
@@ -1,7 +1,8 @@
 .db-page--merch-store {
 
   .db-section--merch-store-search {
-    background-image: url('Merch-Store_Search_bg-v01-1900x461.jpg');
+    // background-image: url('Merch-Store_Search_bg-v01-1900x461.jpg');
+    background-image: url('Emporium_Search_bg-v02-4096x994.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
