--- a/templates/page.merch-store.liquid
+++ b/templates/page.merch-store.liquid
@@ -627,7 +627,7 @@
         });
 
         // console.log('temp_genders =', temp_genders);
-        console.log('temp_types =', temp_types);
+        //console.log('temp_types =', temp_types);
 
         this.shop.products.filters.gender.list = [ ...new Set(temp_genders) ];
 
