feature: add size guide layout inside the product description

--- a/styles/db-theme/pages/_page--product.scss
+++ b/styles/db-theme/pages/_page--product.scss
@@ -565,6 +565,40 @@
               @media only screen and (max-width: 1080px) {
                 display: none;
               }
+
+              .size-guide-title {
+                display: block;
+                margin: 15px 0;
+              }
+
+              table {
+                border-collapse: collapse;
+                width: 100%;
+                margin: 25px 0;
+
+                tr {
+                  td {
+                    color: $white-color;
+                    font-family: $secondary-font-family;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 700;
+                    font-feature-settings: 'calt' off;
+                    text-align: center;
+                    text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                    line-height: 1.25em;
+                    letter-spacing: -0.36px;
+                    white-space: nowrap;
+                    padding: 14px;
+                    vertical-align: middle;
+                    border: 1px solid rgba(255, 255, 255, 0.40);
+
+                    &:nth-child(1) {
+                      
+                    }
+                  }
+                }
+              }
             }
           }
         }
