--- a/assets/theme.css
+++ b/assets/theme.css
@@ -12935,6 +12935,31 @@ ul, ol {
     display: none;
   }
 }
+.db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-details .size-guide-title {
+  display: block;
+  margin: 15px 0;
+}
+.db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-details table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 25px 0;
+}
+.db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-details table tr td {
+  color: var(--white-color);
+  font-family: var(--secondary-font-family);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  font-feature-settings: "calt" off;
+  text-align: center;
+  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
+  line-height: 1.25em;
+  letter-spacing: -0.36px;
+  white-space: nowrap;
+  padding: 14px;
+  vertical-align: middle;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+}
 .db-page--product-page .db-section--product-details .db-container .product-details {
   display: none;
 }
